--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chainsafe/libp2p-gossipsub": "^8.0.0",
+    "@chainsafe/libp2p-noise": "^12.0.1",
+    "@chainsafe/libp2p-yamux": "^4.0.2",
+    "@libp2p/floodsub": "^7.0.1",
+    "@libp2p/mplex": "^8.0.3",
+    "@libp2p/pubsub-peer-discovery": "^8.0.4",
+    "@libp2p/tcp": "^7.0.1",
+    "@libp2p/webrtc": "^2.0.6",
+    "@libp2p/websockets": "^6.0.1",
+    "@nodeutils/defaults-deep": "^1.1.0",
     "@polybase/auth": "^0.6.1",
     "@polybase/client": "^0.6.1",
     "@polybase/react": "^0.6.1",
@@ -13,16 +23,25 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "execa": "^7.1.1",
+    "fs-extra": "^11.1.1",
+    "it-to-buffer": "^4.0.2",
+    "libp2p": "^0.45.4",
+    "net": "^1.0.2",
+    "p-defer": "^4.0.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "uint8arrays": "^4.0.3",
+    "web-vitals": "^2.1.4",
+    "which": "^3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
     "format": "prettier --write \"src/**/*.jsx\""
@@ -46,14 +65,18 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "eslint": "^8.42.0",
-    "eslint-config-standard-with-typescript": "^35.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.7.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
-    "prettier": "^2.8.8",
-    "typescript": "^5.1.3"
+    "assert": "^2.0.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https": "^1.0.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "typescript": "^5.1.3",
+    "url": "^0.11.0"
   }
 }
