--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@chainsafe/libp2p-noise": "^12.0.1",
     "@chainsafe/libp2p-yamux": "^4.0.2",
     "@libp2p/floodsub": "^7.0.1",
+    "@libp2p/kad-dht": "^9.3.6",
     "@libp2p/mplex": "^8.0.3",
     "@libp2p/pubsub-peer-discovery": "^8.0.4",
     "@libp2p/tcp": "^7.0.1",
