--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
+    "dotenv": "^16.1.4",
+    "dotenv-expand": "^10.0.0",
+    "ethers": "5.7",
     "execa": "^7.1.1",
     "fs-extra": "^11.1.1",
     "it-to-buffer": "^4.0.2",
@@ -37,6 +40,7 @@
     "react-scripts": "5.0.1",
     "uint8arrays": "^4.0.3",
     "web-vitals": "^2.1.4",
+    "web3.storage": "^4.5.4",
     "which": "^3.0.1"
   },
   "scripts": {
