--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@chainsafe/libp2p-gossipsub": "^8.0.0",
     "@chainsafe/libp2p-noise": "^12.0.1",
     "@chainsafe/libp2p-yamux": "^4.0.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@libp2p/floodsub": "^7.0.1",
     "@libp2p/kad-dht": "^9.3.6",
     "@libp2p/mplex": "^8.0.3",
@@ -13,6 +15,9 @@
     "@libp2p/tcp": "^7.0.1",
     "@libp2p/webrtc": "^2.0.6",
     "@libp2p/websockets": "^6.0.1",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.5",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@nodeutils/defaults-deep": "^1.1.0",
     "@polybase/auth": "^0.6.1",
     "@polybase/client": "^0.6.1",
@@ -38,6 +43,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.11",
     "uint8arrays": "^4.0.3",
     "web-vitals": "^2.1.4",
     "web3.storage": "^4.5.4",
